prevent login button navbar shift

--- a/components/header.module.css
+++ b/components/header.module.css
@@ -23,6 +23,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    height: 39px;
 }
 
 .easein {
